# llm-training-lab

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: experiment.yml
.github/workflows/: ci.yml
configs/: tiny_transformer.json
data/: tiny.txt
docs/: BPE_DEEP_DIVE.md  EXPERIMENT_TEMPLATE.md  LAB_CHECKLIST.md  LEARNING_PLAN.md  MATH_PRIMER.md  PROGRESS.md  SYSTEMS_COST_OPTIMIZATION.md  TIME_AND_PORTFOLIO_PLAN.md  WHAT_IF_EXPERIMENTS.md
experiments/: 2026-07-16_module-00-dtype.md  2026-07-16_module-00-tensor-benchmark.md  2026-07-17_module-01-bpe.md  2026-07-17_module-01-byte-tokenizer.md  2026-07-19_bpe-scaling.md
labs/00_setup/: README.md  dtype_benchmark.py  tensor_benchmark.py  tensor_exercises.py
labs/01_tokenization/: README.md  bpe_exercises.py  bpe_scaling_benchmark.py  multilingual_bpe_experiment.py  tokenizer_lab.py
labs/03_language_modeling/: train_bigram.py
labs/04_transformer/: train_tiny_transformer.py
revision/: README.md  bpe-tradeoff-beginner.html  module-00-revision.html  module-01-revision.html  tokenizer-tradeoff-simulator.html
src/llm_lab/: __init__.py  cost.py  experiment.py  lora.py  models.py  tokenizer.py
tests/: test_cost.py  test_experiment.py  test_models.py  test_setup_lab.py  test_tokenizer.py
